# credit-scoring-shap

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_interpretability.ipynb  04_fairness.ipynb  05_foundation_models.ipynb
reports/: fairness_metrics.csv  foundation_models_comparison.csv  gridsearch_results.csv  model_comparison.csv  optuna_best_params.csv  optuna_results.csv
reports/figures/: feature_importance.csv
src/credit_scoring/: __init__.py
src/credit_scoring/api/: __init__.py  main.py  schemas.py
src/credit_scoring/data/: loader.py  validation.py
src/credit_scoring/fairness/: __init__.py  analysis.py
src/credit_scoring/features/: engineering.py
src/credit_scoring/interpretability/: __init__.py  explanation.py  run_analysis.py  shap_analysis.py
src/credit_scoring/models/: cost_analysis.py  evaluate.py  train.py
src/credit_scoring/tracking/: __init__.py  experiment.py
tests/: test_pipeline.py
