[tool.poetry]
name = "credit-scoring-shap"
version = "0.1.0"
description = "Credit Scoring model with SHAP interpretability for risk assessment in financial institutions"
authors = ["Jorge <jorge@email.com>"]
readme = "README.md"
packages = [{include = "credit_scoring", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
shap = "^0.43.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
ucimlrepo = "^0.0.3"
optuna = "^4.6.0"
mlflow = "^2.10.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
fairlearn = "^0.10.0"
pandera = "^0.18.0"
tabpfn = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.0"
nbformat = "^5.9.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["credit_scoring"]
skip = [".venv", "venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
